--- a/modules/administration-guide/partials/proc_setting-up-an-application-link-on-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-an-application-link-on-the-bitbucket-server.adoc
@@ -45,11 +45,11 @@ openssl rand -base64 24 > bitbucket-shared-secret
 
 . Paste the content of the `bitbucket-shared-secret` file as the *Shared secret*.
 
-. Enter `__<bitbucket_server_url>__/plugins/servlet/oauth/request-token` as the *Request Token URL*.
+. Enter `<bitbucket_server_url>/plugins/servlet/oauth/request-token` as the *Request Token URL*.
 
-. Enter `__<bitbucket_server_url>__/plugins/servlet/oauth/access-token` as the *Access token URL*.
+. Enter `<bitbucket_server_url>/plugins/servlet/oauth/access-token` as the *Access token URL*.
 
-. Enter `__<bitbucket_server_url>__/plugins/servlet/oauth/authorize` as the *Authorize URL*.
+. Enter `<bitbucket_server_url>/plugins/servlet/oauth/authorize` as the *Authorize URL*.
 
 . Check the *Create incoming link* checkbox and click *Continue*.
 
